--- a/styles/less/main.less
+++ b/styles/less/main.less
@@ -1,4 +1,8 @@
-.test{
-  margin:10px;
-  color:deepskyblue;
-}
+/*base*/
+@import "base/_base";
+/*layout*/
+@import "layout/_header";
+/*modules*/
+@import "modules/_buttons";
+/*tools*/
+@import "tools/_site-settings";
